fixed layout spacing of landing page

--- a/style.css
+++ b/style.css
@@ -190,6 +190,14 @@ nav {
      margin: 0 250px;
 }
 
+.landingLinesContainer,
+.landingImgContainer {
+     display: flex;
+     flex-direction: column;
+     justify-content: center;
+     height: 100%;
+}
+
 .line1 {
      font-size: 30px;
 }
@@ -442,18 +450,6 @@ nav {
      animation-delay: 1s;
 }
 
-.delay6 {
-     animation-delay: 1.1s;
-}
-
-.delay7 {
-     animation-delay: 1.2s;
-}
-
-.delay8 {
-     animation-delay: 1.3s;
-}
-
 .floatIntoPlace {
      visibility: hidden;
      animation: 0.5s floatIntoPlace ease-in-out forwards;
@@ -473,15 +469,15 @@ nav {
 }
 
 .delay9 {
-     animation-delay: 2s;
+     animation-delay: 1.3s;
 }
 
 .delay10 {
-     animation-delay: 2.1s;
+     animation-delay: 1.4s;
 }
 
 .delay11 {
-     animation-delay: 2.2s;
+     animation-delay: 1.5s;
 }
 
 .fadeInSlower {
@@ -501,5 +497,5 @@ nav {
 }
 
 .delay12 {
-     animation-delay: 2.8s;
+     animation-delay: 2s;
 }
